syntax = "proto3";

option java_multiple_files = true;

option java_package = "com.grpc.calculator";

message TwoNumbers {
  int32 number_1 = 1;
  int32 number_2 = 2;
}
message Answer {
  int32 number_1 = 1;
}

service SimpleCalculation {
  rpc addTwoNumbers(TwoNumbers) returns(Answer);
  rpc multiplyTwoNumbers(TwoNumbers) returns(Answer);
  rpc divideTwoNumbers(TwoNumbers) returns(Answer);
  rpc subtractTwoNumbers(TwoNumbers) returns(Answer);
}T